# permalint

./: .cursorrules  .gitignore  .ruff.toml  README.md  pkgx.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/permalint/: __init__.py
tests/: test_is_canonical_url.py  test_normalize_url.py  test_possible_names.py
