[project]
name = "permalint"
version = "0.1.0"
description = "Lint URLs"
authors = [{ name = "Sanchit Ram Arvind", email = "sanchitram@gmail.com" }]
dependencies = ["ruff~=0.0"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest", "ruff", "ty"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/permalint"]

[tool.pytest.ini_options]
pythonpath = ["src"]
