[project]
name = "permalint"
version = "0.1.15"
description = "Lint URLs"
authors = [{ name = "Sanchit Ram Arvind", email = "sanchitram@gmail.com" }]
dependencies = [
 "tldextract>=5.3.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.urls]
Homepage = "https://github.com/sanchitram/permalint"
Repository = "https://github.com/sanchitram/permalint"
Source = "https://github.com/sanchitram/permalint"

[tool.uv]
managed = true
package = true 

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["D1", "D211", "D213", "S101", "FBT001"]
select = ["ALL"]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
minversion = "9.0"
addopts = ["-ra", "-q", "--cov", "--cov-report=term-missing"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = [
    "src"
]
omit = [
    "tests/*.py"
]

[tool.coverage.report]
show_missing = true
